fix index img on small devices

--- a/app/client/less/index.less
+++ b/app/client/less/index.less
@@ -85,6 +85,7 @@ body {
 			display: block;
 			margin: 0 auto 20px;
 			max-height: 40%;
+			max-width: 40%;
 		}
 		.intro-text {
 			.name {
@@ -258,6 +259,7 @@ body {
 		}
 	}
 
+	// SMALL
 	@media(max-width:@screen-xs-max) {
 		section {
 			padding: 75px 0;
@@ -265,7 +267,11 @@ body {
 		section.first {
 			padding-top: 75px;
 		}
-
+		header {
+			.container {
+				padding-top: 60px;
+			}
+		}
 	}
 
 	@media(max-width:@screen-sm-max) {
